fix courses title size on mobile

--- a/src/components/home/FindCoursesSection.scss
+++ b/src/components/home/FindCoursesSection.scss
@@ -76,7 +76,7 @@
             width: 80vw;
     
             .section-title {
-                font-size: 400%;
+                font-size: 250%;
             }
         }
 
